$Id: ChangeLog 4103 2015-06-01 19:51:18Z chrfranke $

2015-06-01  Christian Franke  <franke@computer.org>

	Makefile.am, smartd.8.in: Hide initscript documentation if
	initscriptdir is not configured.
	smartd.conf.5.in: Remove outdated info about default shell.

2015-05-30  Christian Franke  <franke@computer.org>

	Fixes for aacraid patch:
	aacraid.h: Fix _WIN32/_WIN64 checks.
	os_win32.cpp: Clarify copyright info in GPL header.
	Improve source code formatting.
	Fix build on Cygwin.  Fix HKEY leak.
	Fix member initialization order.
	Fix info_name and dev_type parameter order.
	Improve error handling.  Avoid unsafe sprintf().
	Remove unused variables.  Add help text.
	Use 0 as number of first aacraid controller as on Linux.

	smartctl.8.in, smartd.conf.5.in: Update '-d aacraid' documentation.
	AUTHORS: Add Nidhi Malhotra.

2015-05-30  Nidhi Malhotra  <nidhi.malhotra@pmcs.com>

	aacraid.h, os_win32.cpp:
	Add aacraid support for Windows (ticket #496).

2015-05-27  Christian Franke  <franke@computer.org>

	INSTALL: Update ./configure description.
	Remove info about old Linux kernel series.
	Update Windows info.

2015-05-19  Christian Franke  <franke@computer.org>

	ataprint.cpp: Print the Additional Product Identifier (OEM Id)
	regardless of '-q noserial' option.

	smartctl.8.in, smartd.conf.5.in: Clarify '-H' option and directive.

2015-05-17  Christian Franke  <franke@computer.org>

	drivedb.h:
	- USB: ViPowER USB3.0 Storage (0x0350:0x0038)
	- USB: Buffalo DriveStation HD-LBU2 (0x0411:0x01ea)
	- USB: Toshiba Stor.E Basics; (0x0480:0xa00e)
	- USB: Toshiba Canvio Desktop (0x0480:0xd011)
	- USB: Samsung M3 Portable USB 3.0 (0x04e8:0x61b3)
	- USB: Iomega (0x059b:0x0575)
	- USB: Genesys Logic GL3310 (0x05e3:0x0731)
	- USB: Freecom HD (0x07ab:0xfcd6)
	- USB: Apricorn SATA Wire (0x0984:0x0040)
	- USB: WD My Passport (0x1058:0x0830)
	- USB: WD My Book: Merge entries, add 0x1058:0x0900, 0x1058:0x1104
	- USB: Initio (0x13fd:0x3940)