@@ -1,4 +1,10 @@
-$Id: ChangeLog 4103 2015-06-01 19:51:18Z chrfranke $
+$Id: ChangeLog 4104 2015-06-03 18:50:39Z chrfranke $
+
+2015-06-03  Christian Franke  <franke@computer.org>
+
+	ataprint.cpp: Read General Purpose Log Directory only if GPL
+	feature set is supported.  Improve support check of old logs
+	for older drives which return empty SMART Log Directory.
 
 2015-06-01  Christian Franke  <franke@computer.org>
 
